--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
         }
 
         #more-info-button {
-            position: absolute;
-            top: 20px;
-            right: 20px;
+            position: fixed;
+            bottom: 20px;
+            left: 20px;
             background-color: #f1f1f1; /* Same as overlay background color */
             color: #000; /* Text color */
             border: none;
